--- a/client/src/components/Homepage/Homepage.css
+++ b/client/src/components/Homepage/Homepage.css
@@ -94,45 +94,3 @@
   margin-top: 20px;
   margin-left: 20px;
 }
-
-#homepage-container .orb {
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  animation: color 10s linear infinite;
-}
-
-#main-content-container #homepage-container .position-orb {
-  transition: 0.5s;
-  transform: translate(0px, -50px);
-  animation: none;
-}
-
-#main-content-container .rotate .orb {
-  transform-origin: 0px 50px;
-  transform: translate(0px, -50px);
-  animation: color 10s linear infinite, rotate-orb 2s linear infinite;
-}
-
-@keyframes color {
-  0% {
-    filter: hue-rotate(0deg);
-  }
-
-  100% {
-    filter: hue-rotate(360deg);
-  }
-}
-
-@keyframes rotate-orb {
-  0% {
-    transform: translate(0px, -50px) rotateZ(0deg);
-  }
-
-  100% {
-    transform: translate(0px, -50px) rotateZ(360deg);
-  }
-}
