--- a/client/src/components/Work/Project/Images/SelectedImage/SelectedImage.css
+++ b/client/src/components/Work/Project/Images/SelectedImage/SelectedImage.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 0;
-  z-index: 10;
+  z-index: 20;
 }
 
 #main-project-container #selected-image-container img {
